--- a/packages/editor-ui/src/plugins/i18n/locales/es.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/es.json
@@ -40,7 +40,7 @@
     "generic.reset": "Restablecer",
     "generic.resetAllFilters": "Restablecer todos los filtros",
     "generic.communityNode": "Nodo de la Comunidad",
-    "generic.communityNode.tooltip": "Este es un nodo de nuestra comunidad. Es parte del paquete {packageName}. <a href=\"{docURL}\" target=\"_blank\" title=\"Leer la documentación \">Más información</a>",
+    "generic.communityNode.tooltip": "Este es un nodo de nuestra comunidad. Es parte del paquete {packageName}. <a href=\"{docURL}\" target=\"_blank\" title=\"Leer la documentación de n8n\">Más información</a>",
     "generic.copy": "Copiar",
     "generic.delete": "Eliminar",
     "generic.dontShowAgain": "No mostrar de nuevo",
@@ -729,7 +729,7 @@
     "genericHelpers.minShort": "m",
     "genericHelpers.sec": "seg",
     "genericHelpers.secShort": "s",
-    "suggestedTemplates.heading": "{name}, comienza con xincronic builder 👇",
+    "suggestedTemplates.heading": "{name}, comienza con n8n 👇",
     "suggestedTemplates.sectionTitle": "Explora plantillas de flujos de trabajo {sectionName}",
     "suggestedTemplates.newWorkflowButton": "Crear flujo de trabajo en blanco",
     "suggestedTemplates.modal.button.label": "Usar Plantilla",
@@ -743,7 +743,7 @@
     "readOnlyEnv.showMessage.executions.title": "No se puede editar la ejecución",
     "readOnlyEnv.showMessage.workflows.message": "Los flujos de trabajo son de solo lectura en instancias protegidas.",
     "readOnlyEnv.showMessage.workflows.title": "No se puede editar el flujo de trabajo",
-    "mainSidebar.aboutN8n": "Acerca de xincronic",
+    "mainSidebar.aboutN8n": "Acerca de n8n",
     "mainSidebar.confirmMessage.workflowDelete.cancelButtonText": "",
     "mainSidebar.confirmMessage.workflowDelete.confirmButtonText": "Sí, eliminar",
     "mainSidebar.confirmMessage.workflowDelete.headline": "¿Eliminar flujo de trabajo?",
